# chameleon

./: .gitignore  README.md  pyproject.toml
chameleon-docs/: mkdocs.yml
chameleon-docs/docs/: demo_monarch.md  demo_simple.md  index.md
chameleon-docs/docs/examples/: canine_vo.json  demo_monarch.ipynb  demo_simple.ipynb
chameleon-docs/docs/examples/demo/Wave 1/gpe/: gpe_y0.pt  gpe_y1.pt  gpe_y2.pt  gpe_y3.pt
chameleon-docs/docs/examples/demo/Wave 2/: wave.pkl
chameleon-docs/docs/examples/demo/Wave 2/gpe/: gpe_y0.pt  gpe_y1.pt  gpe_y2.pt  gpe_y3.pt
chameleon-docs/docs/examples/demo/Wave 3/: wave.pkl
chameleon-docs/docs/examples/demo/Wave 3/gpe/: gpe_y0.pt  gpe_y1.pt  gpe_y2.pt  gpe_y3.pt
chameleon-docs/docs/examples/demo/Wave 4/: wave.pkl
chameleon-docs/docs/examples/demo/Wave 4/gpe/: gpe_y0.pt  gpe_y1.pt  gpe_y2.pt  gpe_y3.pt
chameleon-docs/docs/examples/demo/Wave 5/: wave.pkl
chameleon-docs/docs/examples/demo/Wave 5/gpe/: gpe_y0.pt  gpe_y1.pt  gpe_y2.pt  gpe_y3.pt
chameleon-docs/docs/examples/demo/Wave 6/: wave.pkl
chameleon-docs/docs/examples/demo/Wave 6/gpe/: gpe_y0.pt  gpe_y1.pt  gpe_y2.pt  gpe_y3.pt
chameleon-docs/docs/examples/demo/sensitivity/Wave 1/: wave.pkl
chameleon-docs/site/: 404.html  index.html
chameleon-docs/site/demo_simple/: index.html
chameleon-docs/site/examples/: index.html
chameleon-docs/site/search/: search_index.json
examples/: demo_monarch.ipynb  demo_simple.ipynb  simple_model.ipynb
src/chameleon/: __init__.py  camouflage.py  colors.py  gpe_pytorch.py  monarch_utils.py  utils.py  wave.py
(+4 files in other folders)
