[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chameleon"
version = "0.1"
authors = [
  { name="Pim Oomen", email="pim.oomen@uci.edu" },
  { name="Clara Jones", email="claraej@uci.edu" },
]
description = "Open-source modeling environment to simulate cardiac physiology and remodeling"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==2.0.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "torch>=2.4.1",
    "gpytorch>=1.13",
    "scikit-learn>=1.5.2",
    "salib>=1.5.1",
    "diversipy>=0.9",
    "scipy>=1.14.1",
    "mne-connectivity>=0.7.0",
    "SALib>=1.5.1",
    "jupyterlab",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/beatlab/chameleon"
Issues = "https://github.com/beatlab/chameleon/issues"